# streamdeck

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS  AGENTS.md  ASSET_DEBUGGING_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  CONVERSATION_SUMMARY.md  CSS_FIX_SUMMARY.md  Futut a faire.md  IMPLEMENTATION_COMPLETE.md  LICENSE  MAJOR_IMPROVEMENTS_ANALYSIS.md  Makefile  PHASE1_SUMMARY.md  PHASE2_SUMMARY.md  PHASE3_SUMMARY.md  PHASE4_SUMMARY.md  PROJECT_METADATA.json  README.md  SECURITY.md  TODO.md  TODO_REORGANISATION.md  build-android-complete.ps1  jest.e2e.config.mjs
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
android/: .editorconfig  .gitignore  DESKTOP_DEBUG.md  build.gradle.kts  keystore.properties.example  settings.gradle.kts
android-control-deck/: .gitignore  build.gradle.kts  gradle.properties  settings.gradle.kts
android-control-deck/app/: build.gradle.kts
android-control-deck/docs/: localization.md
android-control-deck/server/: index.js  package.json
android/app/: build.gradle.kts  proguard-rules.pro
android/benchmark/: build.gradle.kts
android/docs/: user-testing.md
docs/: MIGRATION_SECURITY.md  MIGRATION_TO_PYTHON.md  openapi.json
scripts/: verify-production-ready.ps1  verify-production-ready.sh
server/: .dockerignore  .gitignore  Dockerfile  GUIDE_DEPLOIEMENT.md  GUIDE_INSTALLATION_PRODUCTION.md  README.md  README_DEPLOYMENT.md  README_ENV.md  README_TESTING.md  docker-compose.yml  index.js  package.json
server/actions/: audio.js  (+10 more)
server/backend/: pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
server/backend/app/: __init__.py  config.py  constants.py  exceptions.py  main.py  websocket.py
server/backend/app/actions/: __init__.py  audio.py  clipboard.py  keyboard.py  obs.py  processes.py  screenshot.py  scripts.py  system.py
server/backend/app/middleware/: compression.py
server/backend/app/plugins/: __init__.py  base.py  discord.py  manager.py  obs.py  spotify.py
server/backend/app/routes/: __init__.py  discovery.py  health.py  plugins.py  profiles.py  tokens.py
server/backend/app/utils/: __init__.py  cache_manager.py  discovery.py  logger.py  pairing.py  profile_manager.py  rate_limiter.py  token_manager.py
server/backend/scripts/: start.ps1  start.sh
server/backend/tests/: README.md  conftest.py  test_actions.py  test_actions_scripts.py  test_api.py  test_profile_manager.py  test_security.py  test_websocket.py
web/: README.md  README_SERVING.md  README_TESTING.md  TESTING_GUIDE.md  index.html  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
(+384 files in other folders)
